--- a/plug-in-file-vera.ui
+++ b/plug-in-file-vera.ui
@@ -7,7 +7,7 @@
     <property name="border_width">12</property>
     <property name="spacing">12</property>
     <child>
-      <object class="GimpFrame" id="image-type-frame">
+      <object class="GimpFrame" id="tile-bpp-frame">
         <property name="visible">True</property>
         <property name="label" translatable="yes">Bits Per Pixel</property>
         <child>
@@ -32,7 +32,7 @@
                 <property name="receives_default">False</property>
                 <property name="use_underline">True</property>
                 <property name="draw_indicator">True</property>
-                <property name="group">image-type-standard</property>
+                <property name="group">tile-bpp-2</property>
               </object>
             </child>
 			<child>
@@ -43,7 +43,7 @@
                 <property name="receives_default">False</property>
                 <property name="use_underline">True</property>
                 <property name="draw_indicator">True</property>
-                <property name="group">image-type-standard</property>
+                <property name="group">tile-bpp-2</property>
               </object>
 		  	</child>
           </object>
