--- a/plug-in-file-vera.ui
+++ b/plug-in-file-vera.ui
@@ -1,6 +1,5 @@
 <?xml version="1.0"?>
-<interface>
-  <!-- interface-requires gtk+ 2.12 -->
+<interface> <!-- interface-requires gtk+ 2.12 -->
   <!-- interface-naming-policy project-wide -->
   <object class="GtkVBox" id="vbox">
     <property name="visible">True</property>
@@ -35,7 +34,7 @@
                 <property name="group">tile-bpp-2</property>
               </object>
             </child>
-			<child>
+            <child>
               <object class="GtkRadioButton" id="tile-bpp-8">
                 <property name="label" translatable="yes">8 bpp</property>
                 <property name="visible">True</property>
@@ -45,7 +44,73 @@
                 <property name="draw_indicator">True</property>
                 <property name="group">tile-bpp-2</property>
               </object>
-		  	</child>
+            </child>
+          </object>
+        </child>
+      </object>
+    </child>
+    <child>
+      <object class="GimpFrame" id="tile-width-frame">
+        <property name="visible">True</property>
+        <property name="label" translatable="yes">Tile Width</property>
+        <child>
+          <object class="GtkVBox" id="tile-width-vbox">
+            <property name="visible">True</property>
+            <property name="spacing">2</property>
+            <child>
+              <object class="GtkRadioButton" id="tile-width-8">
+                <property name="label" translatable="yes">8 pixels</property>
+                <property name="visible">True</property>
+                <property name="can_focus">True</property>
+                <property name="receives_default">False</property>
+                <property name="use_underline">True</property>
+                <property name="draw_indicator">True</property>
+              </object>
+            </child>
+            <child>
+              <object class="GtkRadioButton" id="tile-width-16">
+                <property name="label" translatable="yes">16 pixels</property>
+                <property name="visible">True</property>
+                <property name="can_focus">True</property>
+                <property name="receives_default">False</property>
+                <property name="use_underline">True</property>
+                <property name="draw_indicator">True</property>
+                <property name="group">tile-width-8</property>
+              </object>
+            </child>
+          </object>
+        </child>
+      </object>
+    </child>
+    <child>
+      <object class="GimpFrame" id="tile-height-frame">
+        <property name="visible">True</property>
+        <property name="label" translatable="yes">Tile Height</property>
+        <child>
+          <object class="GtkVBox" id="tile-height-vbox">
+            <property name="visible">True</property>
+            <property name="spacing">2</property>
+            <child>
+              <object class="GtkRadioButton" id="tile-height-8">
+                <property name="label" translatable="yes">8 pixels</property>
+                <property name="visible">True</property>
+                <property name="can_focus">True</property>
+                <property name="receives_default">False</property>
+                <property name="use_underline">True</property>
+                <property name="draw_indicator">True</property>
+              </object>
+            </child>
+            <child>
+              <object class="GtkRadioButton" id="tile-height-16">
+                <property name="label" translatable="yes">16 pixels</property>
+                <property name="visible">True</property>
+                <property name="can_focus">True</property>
+                <property name="receives_default">False</property>
+                <property name="use_underline">True</property>
+                <property name="draw_indicator">True</property>
+                <property name="group">tile-height-8</property>
+              </object>
+            </child>
           </object>
         </child>
       </object>
