--- a/plug-in-file-vera-bitmap.ui
+++ b/plug-in-file-vera-bitmap.ui
@@ -14,6 +14,16 @@
             <property name="visible">True</property>
             <property name="spacing">2</property>
             <child>
+              <object class="GtkRadioButton" id="tile-bpp-1">
+                <property name="label" translatable="yes">1 bpp</property>
+                <property name="visible">True</property>
+                <property name="can_focus">True</property>
+                <property name="receives_default">False</property>
+                <property name="use_underline">True</property>
+                <property name="draw_indicator">True</property>
+              </object>
+            </child>
+            <child>
               <object class="GtkRadioButton" id="tile-bpp-2">
                 <property name="label" translatable="yes">2 bpp</property>
                 <property name="visible">True</property>
@@ -21,6 +31,7 @@
                 <property name="receives_default">False</property>
                 <property name="use_underline">True</property>
                 <property name="draw_indicator">True</property>
+                <property name="group">tile-bpp-1</property>
               </object>
             </child>
             <child>
@@ -31,7 +42,7 @@
                 <property name="receives_default">False</property>
                 <property name="use_underline">True</property>
                 <property name="draw_indicator">True</property>
-                <property name="group">tile-bpp-2</property>
+                <property name="group">tile-bpp-1</property>
               </object>
             </child>
             <child>
@@ -42,7 +53,7 @@
                 <property name="receives_default">False</property>
                 <property name="use_underline">True</property>
                 <property name="draw_indicator">True</property>
-                <property name="group">tile-bpp-2</property>
+                <property name="group">tile-bpp-1</property>
               </object>
             </child>
           </object>
