--- a/plug-in-file-vera-selector.ui
+++ b/plug-in-file-vera-selector.ui
@@ -38,5 +38,21 @@
         </child>
       </object>
     </child>
+	<child>
+      <object class="GimpFrame" id="vera-export-options">
+        <property name="visible">True</property>
+        <property name="label" translatable="yes">Export Options</property>
+          <child>
+            <object class="GtkCheckButton" id="file-header">
+			  <property name="label" translatable="yes">Use 2-byte Header</property>
+			  <property name="visible">True</property>
+              <property name="can_focus">True</property>
+              <property name="receives_default">False</property>
+              <property name="use_underline">True</property>
+              <property name="draw_indicator">True</property>
+            </object>
+          </child>
+      </object>
+	</child>
   </object>
 </interface>
